--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
 	<link href="CSS/style.css" rel="stylesheet" type="text/css"> 
 </head>
 
-<body onLoad="photoA()">
+<body>
 	<div id="slider">
 		<img src="http://jeitests.com/namecouple/image/milton-m-2.jpg" id ="imagenIzquierda" class="imagenes";>
 		<img src="http://jeitests.com/namecouple/image/milton-m-1.jpg" id="imagen" class="imagenes";>
 		<img src="http://jeitests.com/namecouple/image/milton-m-15.jpg" id ="imagenDerecha" class="imagenes";>
 		<div class="left_hold">
-			<img onClick="photo(-1)" class="left" src="Images/arrow_left.png">
+			<img onClick="caroussel(-1)" class="left" src="Images/arrow_left.png">
 		</div>
 
 		<div class="right_hold">
-			<img onClick="photo(1)" class="right" src="Images/arrow_right.png">
+			<img onClick="caroussel(1)" class="right" src="Images/arrow_right.png">
 		</div>
 
 	</div>
 </body>
+<script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/Caroussel.js"></script>
 </html>
