--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Caroussel | Milton Martinez</title>
+	<title>Carroussel | Milton Martinez</title>
 	<link href="CSS/style.css" rel="stylesheet" type="text/css"> 
 </head>
 
