--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Carroussel | Milton Martinez</title>
 	<link href="CSS/style.css" rel="stylesheet" type="text/css"> 
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -19,6 +20,11 @@
 		<div class="right_hold">
 			<img onClick="caroussel(1)" class="right" src="Images/arrow_right.png">
 		</div>
+		<footer class=footerSocial>
+			<div class="social">
+				<a href="https://github.com/miltonmb/miltonmb.github.io" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+			</div>	
+		</footer>
 	</div>
 </body>
 <script src="js/jquery-3.3.1.min.js"></script>
