--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<footer class=footerSocial>
 			<div class="social">
-				<a href="https://github.com/miltonmb/miltonmb.github.io" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+				<a href="https://github.com/miltonmb/caroussel" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
 			</div>	
 		</footer>
 	</div>
